# loon-agent

./: .env.example  .gitignore  README.md  pyproject.toml
deploy/: com.loon-agent.web.plist
docker/: loon-toolbox.Dockerfile
docs/: esper-search.md  exec-sandbox.md  loops.md  spec-research-skills.md  web-site.md
loops/: self-audit.md
masques/: analyst.yaml  briefer.yaml
skills/: code.md  publish.md  research.md
src/loon_agent/: __init__.py  __main__.py  app.py  commands.py  config.py  credentials.py  graph.py  llm.py  loops.py  masques.py  mirror.py  report.py  session.py  state.py  telemetry.py  textbudget.py
src/loon_agent/adapters/: __init__.py  cli.py  telegram.py  web.py
src/loon_agent/exec/: __init__.py  backend.py  docker_backend.py  policy.py
src/loon_agent/memory/: __init__.py  chroma_provider.py  provider.py  scoped.py  sqlite_provider.py
src/loon_agent/skills/: __init__.py  engine.py  model.py
src/loon_agent/tools/: __init__.py  builtins.py  exec.py  followups.py  publish.py  site.py  web.py
tests/: fakes.py  test_app.py  test_chroma_memory.py  test_code_skill.py  test_commands.py  test_config.py  test_credentials.py  test_don.py  test_exec_audit.py  test_exec_docker_backend.py  test_exec_policy.py  test_exec_tools.py  test_followups.py  test_graph.py  test_loops.py  test_masques.py  test_persona_telemetry.py  test_report.py  test_research_skill.py  test_scoped_memory.py  test_session_epochs.py  test_site_tools.py  test_skill_engine.py  test_skill_model.py  test_telegram.py  test_telemetry.py  test_telemetry_logs.py  test_textbudget.py  test_web_adapter.py  test_web_tools.py
