[project]
name = "loon-agent"
version = "0.1.0"
description = "A from-scratch LangChain/LangGraph agent for the homelab, backend-agnostic across Pontoon (Mac M5), ironwood (3080 Ti) and WSL2 vLLM."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain-core>=1.0",
    "langgraph>=1.0",
    "langchain-openai>=0.3",
    "langgraph-checkpoint-sqlite",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    "opentelemetry-sdk>=1.30",
    "opentelemetry-exporter-otlp>=1.30",
    "openinference-instrumentation-langchain>=0.1",
    "python-telegram-bot>=22.0",
    "ddgs>=9.14.4",
    "httpx>=0.28.1",
    "trafilatura>=2.1.0",
    "pyyaml>=6.0.3",
    "markdown-it-py>=4.2.0",
]

[project.scripts]
loon-agent = "loon_agent.__main__:main"

[dependency-groups]
dev = [
    "ruff>=0.8",
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/loon_agent"]

[tool.ruff]
src = ["src", "tests"]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]

[tool.pytest.ini_options]
pythonpath = ["src", "tests"]
testpaths = ["tests"]
